arm64: dts: qcom: sm8250-xiaomi-elish: add keyboard support

--- a/arch/arm64/boot/dts/qcom/sm8250-xiaomi-elish-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8250-xiaomi-elish-common.dtsi
@@ -1010,6 +1010,23 @@
 			bias-disable;
 		};
 	};
+
+	keyboard_active: keyboard-active-state {
+		sleep-pins {
+			pins = "gpio155";
+			function = "gpio";
+			drive-strength = <8>;
+			bias-pull-up;
+		};
+
+		vdd-pins {
+			pins = "gpio127";
+			function = "gpio";
+			drive-strength = <8>;
+			bias-disable;
+			output-high;
+		};
+	};
 };
 
 &uart6 {
@@ -1049,6 +1066,29 @@
 
 &usb_1_role_switch_out {
 	remote-endpoint = <&pm8150b_role_switch_in>;
+};
+
+&usb_2 {
+	/* USB 2.0 only */
+	qcom,select-utmi-as-pipe-clk;
+	status = "okay";
+};
+
+&usb_2_dwc3 {
+	dr_mode = "host";
+	maximum-speed = "high-speed";
+	/* Remove USB3 phy */
+	phys = <&usb_2_hsphy>;
+	phy-names = "usb2-phy";
+};
+
+&usb_2_hsphy {
+	vdda-pll-supply = <&vreg_l5a_0p88>;
+	vdda18-supply = <&vreg_l12a_1p8>;
+	vdda33-supply = <&vreg_l2a_3p1>;
+	status = "okay";
+	pinctrl-0 = <&keyboard_active>;
+	pinctrl-names = "default";
 };
 
 &ufs_mem_hc {
